proof of concept: dialog file-based attitude

--- a/mycroft/configuration/mycroft.conf
+++ b/mycroft/configuration/mycroft.conf
@@ -313,5 +313,12 @@
     "default-backend": "local"
   },
 
+  "attitudes": {
+    "normal": 10,
+    "flippant": 8.0,
+    "funny": 8.0,
+    "irritable": 0
+  },
+
   "debug": false
 }
